changing design row size

--- a/aboutus.html
+++ b/aboutus.html
@@ -83,8 +83,10 @@
     </header>
 
     <div class="container">
-        <div>
-            <div>
+      <div class="row">
+      <div class="col-xs-12 col-sm-10">
+          <div class="row">
+            <div class="col-xs-12">
               <ol class="breadcrumb">
                   <li><a href="index.html">Home</a></li>
                   <li class="active">About</li>
@@ -211,6 +213,7 @@
                 <p style="padding:20px;"></p>
             </div>
        </div>
+
        <div class="row row-content">
             <div class="col-xs-12">
                 <h2>Facts &amp; Figures</h2>
@@ -253,7 +256,8 @@
                 <p style="padding:20px;"></p>
             </div>
        </div>
-
+     </div>
+    </div>
     </div>
 
     <footer class="row-footer">
