--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="200">
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -98,7 +98,7 @@
             </div>
         </div>
 
-        <div class="row row-content">
+        <div id="history" class="row row-content">
             <div class="col-xs-12 col-sm-6 col-lg-8">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
@@ -136,7 +136,7 @@
         </div>
 
 
-        <div class="row row-content">
+        <div id="corporate" class="row row-content">
             <div class="col-xs-12">
                 <h2>Corporate Leadership</h2>
 
@@ -214,7 +214,7 @@
             </div>
        </div>
 
-       <div class="row row-content">
+       <div id="facts" class="row row-content">
             <div class="col-xs-12">
                 <h2>Facts &amp; Figures</h2>
                 <div class="table-responsive">
@@ -256,8 +256,14 @@
                 <p style="padding:20px;"></p>
             </div>
        </div>
+       <nav class="hidden-xs col-sm-2" id="myScrollspy">
+            <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="400">
+                <li><a href="#history">Our History</a></li>
+                <li><a href="#corporate">Corporate</a></li>
+                <li><a href="#facts">Facts</a></li>
+            </ul>
+        </nav>
      </div>
-    </div>
     </div>
 
     <footer class="row-footer">
