--- a/index.html
+++ b/index.html
@@ -60,7 +60,24 @@
                   <li><a href="contactus.html">
                     <i class="fa fa-envelope-o"></i> Contact</a></li>
               </ul>
-              <form class="navbar-form navbar-right">
+              <ul class="nav navbar-nav navbar-right">
+                    <li><a data-toggle="modal" data-target="#loginModal">
+                    <span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
+                </ul>
+          </div>
+      </div>
+    </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Login </h4>
+            </div>
+            <div class="modal-body">
+              <form class="form-inline">
                 <div class="form-group">
                   <input type="email" class="form-control" placeholder="Email">
                 </div>
@@ -70,11 +87,13 @@
                 <label class="checkbox inline">
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-info btn-sm">Sign in</button>
+                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
               </form>
-          </div>
-      </div>
-    </nav>
+            </div>
+        </div>
+        </div>
+    </div>
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -92,7 +111,9 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a href="#reservetable"><button class="btn btn-warning"> Reserve Table </button></a>
+                    <a type="button" class="btn btn-warning btn-block"
+                    data-toggle="tooltip" title="Or Call us at +852 12345678"
+                     data-placement="bottom" href="#reserveform"> Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -271,5 +292,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+         });
+    </script>
 </body>
 </html>
