--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
       <div class="row row-content">
            <div class="col-xs-12">
              <div id="mycarousel" class="carousel slide" data-ride="carousel">
+               <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#mycarousel" data-slide-to="1"></li>
+                    <li data-target="#mycarousel" data-slide-to="2"></li>
+                </ol>
+
                <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                   <div class="item active">
@@ -155,7 +162,7 @@
                     <img class="img-responsive"
                      src="img/alberto.png" alt="Alberto Somayya">
                     <div class="carousel-caption">
-                    <h2>UAlberto Somayya</h2>
+                    <h2>Alberto Somayya</h2>
                     <h4>Executive Chef</h4>
                     <p>Award winning three-star Michelin chef with wide
                      International experience having worked closely with
@@ -166,6 +173,15 @@
                       </div>
                   </div>
               </div>
+              <!-- Controls -->
+             <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                 <span class="sr-only">Previous</span>
+             </a>
+             <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                 <span class="sr-only">Next</span>
+             </a>
            </div>
             </div>
        </div>
