--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a type="button" class="btn btn-warning btn-block"
-                    data-toggle="tooltip" title="Or Call us at +852 12345678"
+                    <a type="button" class="btn btn-warning btn-block" title="Or Call us at +852 12345678"
                      data-placement="bottom" href="#reserveform"> Reserve Table</a>
                 </div>
             </div>
