--- a/index.html
+++ b/index.html
@@ -94,6 +94,71 @@
         </div>
         </div>
     </div>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Reserve Table </h4>
+            </div>
+            <div class="modal-body">
+              <form class="form-inline">
+                <div class="form-group">
+                    <label for="firstname" class="col-sm-3 control-label">Number of Guests</label>
+                    <div class="col-sm-8">
+                      <label class="radio-inline"><input type="radio" value="">1</label>
+                      <label class="radio-inline"><input type="radio" value="">2</label>
+                      <label class="radio-inline"><input type="radio" value="">3</label>
+                      <label class="radio-inline"><input type="radio" value="">4</label>
+                      <label class="radio-inline"><input type="radio" value="">5</label>
+                      <label class="radio-inline"><input type="radio" value="">6</label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Date and &nbsp; &nbsp; &nbsp;Time</label>
+                      <div class="col-sm-4">
+                          <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
+                          <input type="date" class="form-control" placeholder="Date">
+                      </div>
+                      <div class="col-sm-4">
+                        <i class="glyphicon glyphicon-time form-control-feedback"></i>
+                        <input type="time" class="form-control" placeholder="Time">
+                      </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Section</label>
+                      <div class="col-sm-4">
+                          <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
+                          <input type="date" class="form-control" placeholder="Date">
+                      </div>
+                      <div class="col-sm-4">
+                        <i class="glyphicon glyphicon-time form-control-feedback"></i>
+                        <input type="time" class="form-control" placeholder="Time">
+                      </div>
+                    </div>
+                </div>
+
+                  <div class="form-group">
+                      <div class="col-sm-offset-2 col-sm-10">
+                          <button type="submit" class="btn btn-primary">Reserve</button>
+                          <button type="cancel" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+                      </div>
+                  </div>
+                  <br /> <br />
+                  <div class="alert alert-warning alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Warning!</strong> Please <a href="#phone">call</a> us to reserve for more than six guests.
+                  </div>
+              </form>
+            </div>
+        </div>
+        </div>
+    </div>
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -112,7 +177,7 @@
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
                     <a type="button" class="btn btn-warning btn-block" title="Or Call us at +852 12345678"
-                     data-placement="bottom" href="#reserveform"> Reserve Table</a>
+                     data-placement="bottom" data-toggle="modal" data-target="#reserveModal"> Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -264,51 +329,6 @@
               </div>
             </div>
         </div>
-
-        <div class="row row-content" id="reservetable">
-            <div class="col-xs-12 col-sm-3">
-                <p style="padding:20px;"></p>
-                <h3 align=center>Reserve a Table</h3>
-            </div>
-            <div class="col-xs-12 col-sm-9">
-              <form class="form-horizontal" role="form">
-                  <div class="form-group">
-                      <label for="firstname" class="col-sm-2 control-label">Number of Guests</label>
-                      <div class="col-sm-9">
-                        <label class="radio-inline"><input type="radio" value="">1</label>
-                        <label class="radio-inline"><input type="radio" value="">2</label>
-                        <label class="radio-inline"><input type="radio" value="">3</label>
-                        <label class="radio-inline"><input type="radio" value="">4</label>
-                        <label class="radio-inline"><input type="radio" value="">5</label>
-                        <label class="radio-inline"><input type="radio" value="">6</label>
-                      </div>
-                  </div>
-
-                  <div class="form-group">
-                      <label for="firstname" class="col-sm-2 control-label">Date and Time</label>
-                      <div class="col-sm-4 has-feedback">
-                        <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
-                        <input type="date" class="form-control" placeholder="Date">
-                      </div>
-                      <div class="col-sm-4 has-feedback">
-                        <i class="glyphicon glyphicon-time form-control-feedback"></i>
-                        <input type="time" class="form-control" placeholder="Time">
-                      </div>
-
-                  </div>
-
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary">Reserve</button>
-                        </div>
-                    </div>
-                    <div class="alert alert-warning alert-dismissible" role="alert">
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                      <strong>Warning!</strong> Please <a href="#phone">call</a> us to reserve for more than six guests.
-                    </div>
-              </form>
-            </div>
-        </div>
     </div>
 
     <footer class="row-footer">
@@ -356,10 +376,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
-         });
-    </script>
 </body>
 </html>
